<resources>
    <string name="app_name">MDAPP</string>
    <string name="get_started">Get Started</string>
    <string name="feedback">Feedback!</string>
    <string name="ok">ok</string>
    <string name="internetconnectionmessage">Internet connection lost \n\nPlease check your wifi or mobile network</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here_to_reset"><u>Click here to reset</u></string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_yet_please_sign_up">Don\'t have an account yet? Please Sign Up?</string>
    <string name="loadingpleasewait">Loading, Please wait....</string>
    <string name="emailempty">Please enter your email</string>
    <string name="passwordempty">Please enter your password</string>
    <string name="emailisvalid">email is valid</string>
    <string name="emailisnotvalid">Please enter a valid email...</string>
    <string name="wrongusernamepassword">Wrong email/password</string>
    <string name="already_have_an_account_please_sign_in">Already have an account, Please Sign in</string>
    <string name="signup_now">Signup Now</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="registrationproess">Registering, Please wait......</string>
    <string name="usernameempty">Please enter your user name</string>
    <string name="mobilenumberempty">Please enter your mobile no.</string>
    <string name="emailexists">email already exists!</string>
    <string name="registersuccess">Registeration Successful...</string>
    <string name="Address">Address</string>
    <string name="City">City</string>
    <string name="state">State</string>
    <string name="Pincode">Pincode</string>
    <string name="update_info">Update Info</string>
    <string name="somethingwentwrong">something went wrong, please try again later...</string>
    <string name="username">User Name</string>
    <string name="phone">Phone No.</string>
    <string name="showQrCode">Show QR Code</string>
    <string name="Loadingpleasewait">loading, please wait...</string>
    <string name="unabletoreadyourprofile">unable to update profile</string>
    <string name="profileupdated">profile updated...</string>
    <string name="unbaletoupdateyourprofile">unable to update your profile!</string>
    <string name="cancel">cancel</string>
    <string name="pleaseenablecameraPermission">please enable camera permission</string>
    <string name="pleaseenableReadExternalStoragePermission">please enable read external storage permission</string>


    <string-array name="cities">
    <item>Mohali</item>
     <item>Chandigarh</item>
        <item>Ambala</item>
        <item>Zirakpur</item>
        <item>Panchkula</item>
        <item>Moga</item>

    </string-array>
    <string-array name="states">
        <item>Haryana</item>
        <item>Punjab</item>

    </string-array>


    <string-array name="imageSelectOptions">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>



</resources>
