<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:background="@drawable/splash_bg"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/Linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/splash_logo"/>
    </LinearLayout>

<LinearLayout
    android:id="@+id/Linearlayout2"
    android:orientation="vertical"
    android:layout_below="@+id/Linearlayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_marginTop="110dp">


    <EditText
        android:background="@drawable/custom_edit_text_style"
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#000"
        android:textSize="17dp"
         />


    <EditText
        android:layout_marginTop="7dp"
        android:padding="10dp"
        android:background="@drawable/custom_edit_text_style"
        android:inputType="textPassword"
        android:id="@+id/editTextPassword"
        android:textSize="17dp"
        android:gravity="center"
        android:textColorHint="#000"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>

    <LinearLayout
        android:id="@+id/Linearlayout3"
        android:layout_below="@+id/Linearlayout2"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="17dp"
            android:textColor="#000"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:textColor="#000"
            android:textSize="17dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:text="@string/click_here_to_reset"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/textView" />


    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/Linearlayout3"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingRight="100dp"
        android:paddingLeft="100dp"
        android:id="@+id/Linearlayout4"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonClickLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_selectors_style"
            android:padding="14dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="17dp"
            android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_marginBottom="10dp"
            android:gravity="center|bottom"
            android:textStyle="normal"
            android:textSize="17dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/don_t_have_an_account_yet_please_sign_up"
            android:layout_below="@+id/Linearlayout4"
            android:layout_alignParentBottom="true" />






    </RelativeLayout>